Add new post and minor layout fixes

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -46,7 +46,7 @@ permalink: /about/
 
         </div>
     <div class="col-12 col-sm-6 col-text">
-        <h4 class="align-center">.Who am I</h4>
+        <h4 class="align-center heading">.Who am I</h4>
         <p>I'm a Portuguese expat living in the UK for the past 5 years. I'm currently working for an airline as cabin crew and learning how to code in my free time. </p>
         <p>I've always been interested in coding and creating my own programs. After completing the online course Intro to CS and programming with python from MIT at edx.org
             I've decided that it was time to dedicate my free time to learn more about coding and computer science.</p>
