--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -7,31 +7,32 @@ permalink: /blog/
 <div>
   {% for post in site.posts %}
     {% assign mod = forloop.index | modulo: 2 %}
-      {% if mod == 0 %}
-        <hr class="featurette-divider">
-          <div class="row featurette">
-            <div class="col-md-5">
-              <img class="featurette-image img-fluid mx-auto" data-src="{{site.url}}/assets/images/placeholder.jpg" alt="500x500" style="width: 244px; height: 188px;" src="{{site.url}}/assets/images/placeholder.jpg" data-holder-rendered="true">
+      {% if post.url contains 'projects' %}
+      {% comment %} Hide these posts {% endcomment %}
+        {% elsif mod == 0 %}
+          <hr class="featurette-divider">
+            <div class="row featurette">
+              <div class="col-md-5">
+                <a href="{{ post.url }}"><img class="featurette-image img-fluid mx-auto" data-src="{{site.url}}/assets/images/{{post.image}}" alt="{{post.title}}" style="width: 244px; height: 188px;" src="{{site.url}}/assets/images/{{post.image}}" data-holder-rendered="true"></a>
+              </div>
+              <div class="col-md-7">
+                <h2 class="featurette-heading">{{post.title}} <span class="text-muted">{{post.subtitle}}</span></h2>
+                <p class="lead">{{post.excerpt}}</p>
+                <p><a class="btn btn-primary" href="{{post.url}}" role="button">Read more »</a></p>
+              </div>
             </div>
-            <div class="col-md-7">
-              <h2 class="featurette-heading">{{post.title}} <span class="text-muted">{{post.subtitle}}</span></h2>
-              <p class="lead">{{post.excerpt}}</p>
-              <p><a class="btn btn-primary" href="{{post.url}}" role="button">Read more »</a></p>
+        {% else %}
+          <hr class="featurette-divider">
+            <div class="row featurette">
+              <div class="col-md-7">
+                <h2 class="featurette-heading">{{post.title}} <span class="text-muted">{{post.subtitle}}</span></h2>
+                <p class="lead">{{post.excerpt}}</p>
+                <p><a class="btn btn-primary" href="{{post.url}}" role="button">Read more »</a></p>
+              </div>
+              <div class="col-md-5 text-right">
+                <a href="{{ post.url }}"><img class="featurette-image img-fluid mx-auto" data-src="{{site.url}}/assets/images/{{post.image}}" alt="{{post.title}}" style="width: 244px; height: 188px;" src="{{site.url}}/assets/images/{{post.image}}" data-holder-rendered="true"></a>
+              </div>
             </div>
-          </div>
-      {% else %}
-        <hr class="featurette-divider">
-          <div class="row featurette">
-            <div class="col-md-7">
-              <h2 class="featurette-heading">{{post.title}} <span class="text-muted">{{post.subtitle}}</span></h2>
-              <p class="lead">{{post.excerpt}}</p>
-              <p><a class="btn btn-primary" href="{{post.url}}" role="button">Read more »</a></p>
-            </div>
-            <div class="col-md-5 text-right">
-              <img class="featurette-image img-fluid mx-auto" data-src="{{site.url}}/assets/images/placeholder.jpg" alt="500x500" style="width: 244px; height: 188px;" src="{{site.url}}/assets/images/placeholder.jpg" data-holder-rendered="true">
-            </div>
-          </div>
     {% endif %}
   {% endfor %}
 </div>
-
