Update about page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -13,12 +13,12 @@ permalink: /about/
       <div class="col-6 col-md-4 side-col">
         <h4>.Weapons of Trade</h4>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 45%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 55%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
             Python
         </div>
       </div>
         <div class="progress">
-          <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+          <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 35%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
             Git
           </div>
         </div>
@@ -52,7 +52,7 @@ permalink: /about/
             I've decided that it was time to dedicate my free time to learn more about coding and computer science.</p>
         <p>I've been studying on my own using books, online courses and everything else I can get my hands into. I'm currently digging deeper into python, mathematics and algorithms.
             MY goal is to become a good developer and work in challenging new things.</p>
-        <p>I also enjoy travelling and meeting new people and new cultures. I've been to 13 different countries so far, seen over 65 new cities and stepped 3 different continents.</p>
+        <p>I also enjoy travelling and meeting new people and new cultures. I've been to 13 different countries so far, seen over 65 new cities and stepped on 3 different continents.</p>
     </div>
     </div>
   </div>
