Update About page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -36,11 +36,16 @@ permalink: /about/
             <h4 class="heading">.Currently Learning</h4>
 
                 <ul class="list-group">
-                    <li class="list-group-item">RegEx</li>
                     <li class="list-group-item">Fedora</li>
                     <li class="list-group-item">Algorithms</li>
-                    <li class="list-group-item">Pandas</li>
                     <li class="list-group-item">Django</li>
+                </ul>
+
+            <h4 class="heading">.Currently Reading</h4>
+
+                <ul class="list-group">
+                    <li class="list-group-item">Automate the Boring Stuff with Python</li>
+                    <li class="list-group-item">Test Driven Development in Python</li>
                 </ul>
 
 
