--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,38 +1,73 @@
 ---
-layout: blog_layout
+layout: page
 title: Blog
 permalink: /blog/
 ---
+<div class="container-fluid">
+  <div class="row header">
+      <div class="col-sm-6 offset-sm-3 text-center">
+          <h1 class="drop-shadow">Blog</h1>
+      </div>      
+  </div>
+      <div class="row brandcolor-bg">
+          {% for post in site.tags.Featured limit:3 %}
+              <div class="col-sm-4 pad-top opacity">
+                <a href="{{post.url}}">
+                  <div class="card-image overlay text-center" style="background-image: url({{site.url}}/assets/images/{{post.image}});">
+                      <div class="project-text">
+                          <h5 class="pad-top">{{ post.category_icon }} {{ post.categories[0] }}</h6>
+                          <h2 class="white-text drop-shadow">{{ post.title }}</h1>
+                            <div class="white-text pad-bottom pad-left pad-right">
+                                {{post.excerpt | truncate:165}}
+                            </div>  
+                      </div>
+                  </div>
+                </a>  
+              </div>
+            {% endfor %} 
+      </div>
+</div>
 
-<div>
-  {% for post in site.posts %}
-    {% assign mod = forloop.index | modulo: 2 %}
-      {% if post.url contains 'projects' or  post.url contains 'featured' %}
-      {% comment %} Hide these posts {% endcomment %}
-        {% elsif mod == 0 %}
-          <hr class="featurette-divider">
-            <div class="row featurette">
-              <div class="col-md-5">
-                <a href="{{ post.url }}"><img class="featurette-image img-fluid mx-auto" data-src="{{site.url}}/assets/images/{{post.image}}" alt="{{post.title}}" style="width: 244px; height: 188px;" src="{{site.url}}/assets/images/{{post.image}}" data-holder-rendered="true"></a>
-              </div>
-              <div class="col-md-7">
-                <h2 class="featurette-heading">{{post.title}} <span class="text-muted">{{post.subtitle}}</span></h2>
-                <p>{{post.excerpt}}</p>
-                <p><a class="btn btn-primary" href="{{post.url}}" role="button">Read more »</a></p>
-              </div>
-            </div>
-        {% else %}
-          <hr class="featurette-divider">
-            <div class="row featurette">
-              <div class="col-md-7">
-                <h2 class="featurette-heading">{{post.title}} <span class="text-muted">{{post.subtitle}}</span></h2>
-                <p class="lead">{{post.excerpt}}</p>
-                <p><a class="btn btn-primary" href="{{post.url}}" role="button">Read more »</a></p>
-              </div>
-              <div class="col-md-5 text-right">
-                <a href="{{ post.url }}"><img class="featurette-image img-fluid mx-auto" data-src="{{site.url}}/assets/images/{{post.image}}" alt="{{post.title}}" style="width: 244px; height: 188px;" src="{{site.url}}/assets/images/{{post.image}}" data-holder-rendered="true"></a>
-              </div>
-            </div>
-    {% endif %}
-  {% endfor %}
+<div class="container">
+{% for post in site.posts %}
+  {% assign mod = forloop.index | modulo: 2 %}
+  {% if post.url contains 'projects' or post.tags contains 'Featured' %}
+  {% elsif mod == 0 %}
+  <div class="row pad-bottom">
+      <div class="col-md-8 d-none d-md-block">
+          <h1 class="drop-shadow">{{post.title}} </br> <span class="text-muted">{{post.subtitle}}</span></h2>
+          <p>{{ post.excerpt }}</p>
+          <a class="btn btn-brand drop-shadow" href="{{ post.url }}" role="button"> Read More</a> 
+      </div>
+      <div class="col-md-4">
+        <a href="{{post.url}}">
+          <img class="standout img-fluid opacity" src="{{site.url}}/assets/images/{{post.image}}" alt="{{ post.title | escape }}">
+        </a>
+      </div>
+      <!-- Puts text under image on small screens -->
+      <div class="col-sm-8 d-md-none">
+          <h1 class="drop-shadow">{{post.title}} </br> <span class="text-muted">{{post.subtitle}}</span></h2>
+          <p>{{ post.excerpt }}</p>
+          <a class="btn btn-brand drop-shadow" href="{{ post.url }}" role="button"> Read More</a> 
+      </div>
+    </div>
+    <hr class="spaced pad-bottom">
+
+
+  {% else %}
+  <div class="row pad-bottom">
+  <div class="col-md-4">
+    <a href="{{post.url}}">
+      <img class="standout img-fluid opacity" src="{{site.url}}/assets/images/{{post.image}}" alt="{{ post.title | escape }}">
+    </a>
+  </div>
+  <div class="col-md-8">
+      <h1 class="drop-shadow">{{post.title}} </br> <span class="text-muted">{{post.subtitle}}</span></h2>
+      <p>{{ post.excerpt }}</p>
+      <a class="btn btn-brand drop-shadow" href="{{ post.url }}" role="button"> Read More</a> 
+  </div>
+</div>
+<hr class="spaced pad-bottom">
+  {% endif %}
+{% endfor %}
 </div>
