Position elements in div app

--- a/assets/files/weather/index.html
+++ b/assets/files/weather/index.html
@@ -17,11 +17,11 @@
 
 <body>
   <div id="app">
-    <div id="waves-effect">
-
+    <div id="weather">
+      <img src="images/sunny.svg"> Sunny
+      <span class="temperature">24°</span><br>
+      <span id="temp-values">MIN 20° <br> Max 27°</span>
     </div>
-    5:00 AM
-  </div>
 </body>
 
 </html>
