--- a/assets/files/weather-tutorial/index.html
+++ b/assets/files/weather-tutorial/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="app">
       <div id="weather">
-        <img src="images/sunny.svg"> {{overcast}}
+        <img :src=icon> {{overcast}}
         <span class="temperature">{{currentTemp}}°</span><br>
         <span id="temp-values">Min {{minTemp}}° <br> Max {{maxTemp}}°</span>
       </div>
