--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -6,8 +6,7 @@ permalink: /blog/
 <div class="page-header">
   <h1>Blog</h1>
 </div>
-<div class="blog-container">
-  {% assign post_counter = 0 %}
+<div class="page-container">
   {% for post in site.posts %}
       {% if post.url contains 'projects' %}
       {% else %}
